# otus-cpp-basics-lesson8

./: .gitignore  CMakeLists.txt  README.md  default.cpp  my_realization.cpp
test_20_files/: 13.txt  6.txt
